# dabke

./: AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  llms.txt  package-lock.json  package.json  tsconfig.build.json  tsconfig.json  tsconfig.test.json  vitest.config.js
.github/workflows/: ci.yml  publish-solver.yml  publish.yml
scripts/: generate-llmstxt.ts
solver/: Dockerfile  README.md  pyproject.toml
solver/src/solver/: __init__.py  app.py  models.py  solver.py
solver/tests/: test_solver.py
src/: client.schemas.ts  client.ts  client.types.ts  datetime.utils.ts  errors.ts  index.ts  llms.ts  schedule.ts  types.ts  validation.ts
src/cpsat/: cost.ts  model-builder.ts  response.ts  rules.ts  semantic-time.ts  types.ts  utils.ts  validation-reporter.ts  validation.types.ts
src/testing/: index.ts  solver-container.ts
tests/: assignment-priority.unit.test.ts  client.integration.test.ts  client.unit.test.ts  datetime.utils.unit.test.ts  employee-assignment-priority.unit.test.ts  global-setup.ts  schedule.unit.test.ts  validation.unit.test.ts
tests/cpsat/: assign-together.integration.test.ts  assignment-priority.integration.test.ts  cost-calculation.integration.test.ts  cost.unit.test.ts  coverage-variants.integration.test.ts  coverage.integration.test.ts  day-cost-multiplier.integration.test.ts  employee-assignment-priority.integration.test.ts  fairness.integration.test.ts  groupkey-propagation.unit.test.ts  helpers.ts  location-preference.integration.test.ts  max-consecutive-days.integration.test.ts  max-hours-day.integration.test.ts  (+25 more)
(+29 files in other folders)
